project('corticalsim', 'cpp')

# Directories containing header files
incdir = include_directories('include')

# Directories containing source files
subdir('src')

# Dependencies
eigen = dependency('Eigen3', modules: ['Eigen3::Eigen'])
boost = dependency('boost', modules : ['filesystem'])

# Executable(s)
executable('corticalsim3d', sources, include_directories: incdir, dependencies: [eigen, boost])
